--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>[SCRIBD] Downloader</title>
-
+  <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
   <div class="container">
@@ -33,157 +33,6 @@
       </table>
     </div>
   </div>
-
-  <script>
-let recentDocs = JSON.parse(localStorage.getItem('recentDocs')) || [];
-
-function convertUrl() {
-    const inputUrl = document.getElementById('inputUrl').value.trim();
-    const baseUrl = 'https://ilide.info/docgeneratev2?fileurl=https://scribd.vdownloaders.com/pdownload/';
-
-    const match = inputUrl.match(/\/(doc|document|presentation)\/(\d+)\/([\w-]+)/);
-
-    if (match) {
-        const [, type, id, slug] = match;
-
-        const title = slug.replace(/-/g, ' ').replace(/\b\w/g, c => c.toUpperCase());
-        const convertedUrl = `${baseUrl}${id}/${slug}`;
-
-        document.getElementById('docTitle').textContent = title;
-        const link = document.getElementById('downloadLink');
-        link.href = convertedUrl;
-        link.textContent = 'download';
-        document.getElementById('resultSection').style.display = 'block';
-
-        // Update recent documents
-        recentDocs.unshift({ title, link: convertedUrl });
-        recentDocs = recentDocs.slice(0, 10);
-        localStorage.setItem('recentDocs', JSON.stringify(recentDocs));
-
-        updateRecentTable();
-    } else {
-        alert('Invalid URL format');
-    }
-
-    document.getElementById('inputUrl').value = '';
-}
-
-function updateRecentTable() {
-    const tableBody = document.getElementById('recentTableBody');
-    tableBody.innerHTML = '';
-
-    if (recentDocs.length > 0) {
-        document.getElementById('recentSection').style.display = 'block';
-        recentDocs.forEach((doc, index) => {
-            const row = document.createElement('tr');
-            row.innerHTML = `
-                <td>${index + 1}</td>
-                <td>${doc.title}</td>
-                <td><a href="${doc.link}" target="_blank">download</a></td>
-            `;
-            tableBody.appendChild(row);
-        });
-    } else {
-        document.getElementById('recentSection').style.display = 'none';
-    }
-}
-
-// ⏱ Show table on page load if data exists
-window.onload = () => {
-    updateRecentTable();
-};
-</script>
-  <stye>
-    body {
-  font-family: Arial, sans-serif;
-  background: #ffffff;
-  color: #4b00ff;
-  text-align: center;
-  margin: 0;
-  padding: 0;
-}
-
-header {
-  background: linear-gradient(to right, #4bd4d4, #0047ba);
-  padding: 20px 0;
-  color: white;
-}
-
-.highlight {
-  font-weight: bold;
-}
-
-main {
-  padding: 40px 20px;
-}
-
-h2 {
-  margin-bottom: 20px;
-}
-
-.button-group {
-  margin-bottom: 20px;
-}
-
-.type-btn {
-  background: linear-gradient(to right, #a164ff, #48e0e0);
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  margin: 0 5px;
-  border-radius: 10px;
-  font-size: 16px;
-  cursor: pointer;
-}
-
-.input-section {
-  margin-bottom: 30px;
-}
-
-input[type="text"] {
-  width: 60%;
-  padding: 10px;
-  font-size: 16px;
-  border: 2px solid #a164ff;
-  border-radius: 8px;
-}
-
-button {
-  background: linear-gradient(to right, #4bd4d4, #0047ba);
-  color: white;
-  padding: 10px 20px;
-  border: none;
-  margin-left: 10px;
-  font-size: 16px;
-  border-radius: 8px;
-  cursor: pointer;
-}
-
-.result {
-  margin-top: 20px;
-  font-size: 18px;
-}
-
-.recent-section {
-  margin-top: 40px;
-}
-
-table {
-  margin: 0 auto;
-  border-collapse: collapse;
-  width: 80%;
-  border: 2px solid #a164ff;
-}
-
-th, td {
-  border: 1px solid #a164ff;
-  padding: 10px;
-}
-
-a {
-  color: #00aaff;
-  text-decoration: underline;
-}
-  </stye>
+<script src="/script.js"></script>
 </body>
 </html>
