--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>[SCRIBD] Downloader</title>
-  <link rel="stylesheet" href="public/style.css" />
+  <link rel="stylesheet" href="/public/style.css" />
 </head>
 <body>
   <div class="container">
@@ -33,6 +33,6 @@
       </table>
     </div>
   </div>
-<script src="public/script.js"></script>
+<script src="/public/script.js"></script>
 </body>
 </html>
