--- a/public/index.html
+++ b/public/index.html
@@ -126,9 +126,9 @@ a {
   <table>
     <thead>
       <tr>
-        <th>no</th>
-        <th>title</th>
-        <th>link</th>
+        <th>NO</th>
+        <th>TITLE</th>
+        <th>LINK</th>
       </tr>
     </thead>
     <tbody id="recentTableBody">
