--- a/public/index.html
+++ b/public/index.html
@@ -106,14 +106,14 @@ a {
     <h2>What do you want to download from [SCRIBD]?</h2>
 
     <div class="button-group">
-      <button class="type-btn">document</button>
-      <button class="type-btn">presentation</button>
-      <button class="type-btn">book</button>
+      <button class="type-btn">Paste [Scribd] link</button>
+      <button class="type-btn">Click CONVERT</button>
+      <button class="type-btn">Click Download</button>
     </div>
 
     <div class="input-section">
       <input type="text" id="inputUrl" placeholder="paste the [scribd] link here" />
-      <button onclick="convertUrl()">DOWNLOAD</button>
+      <button onclick="convertUrl()">CONVERT</button>
     </div>
 
     <div class="result" id="resultSection" style="display:none;">
