--- a/public/index.html
+++ b/public/index.html
@@ -104,11 +104,11 @@ a {
 
   <main>
     <h2>What do you want to download from [SCRIBD]?</h2>
-
+    <p>3 easy steps to download documents from [Scribd]</p>
     <div class="button-group">
-      <button class="type-btn">Paste [Scribd] link</button>
-      <button class="type-btn">Click CONVERT</button>
-      <button class="type-btn">Click Download</button>
+      <button class="type-btn">1. Paste [Scribd] link</button>
+      <button class="type-btn">2. Click CONVERT</button>
+      <button class="type-btn">3. Click Download</button>
     </div>
 
     <div class="input-section">
