--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>[SCRIBD] Downloader</title>
+  <title>[SCRBD] Downloader</title>
+  <meta name="description" content="[SCRBD] Downloader helps you download document, pdf, and presentation from SCRIBD" />
   <style>
     body {
   font-family: Arial, sans-serif;
