--- a/public/index.html
+++ b/public/index.html
@@ -137,6 +137,36 @@ a {
     </tbody>
   </table>
 </div>
+
+    <div class="faq-section">
+  <h2>FAQ</h2>
+  <div class="accordion">
+    <div class="accordion-item">
+      <button class="accordion-header">What is Scribd?</button>
+      <div class="accordion-body">
+        <p>Scribd is the world’s library of ideas, with over [200M] documents and counting...</p>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <button class="accordion-header">Do I need a subscription to access Scribd?</button>
+      <div class="accordion-body">
+        <p>Some documents require a subscription to access. Others may be available for free.</p>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <button class="accordion-header">What are the benefits of paying for a Scribd subscription?</button>
+      <div class="accordion-body">
+        <p>Subscription gives access to premium content including books, audiobooks, and documents.</p>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <button class="accordion-header">Can I upload and share documents on Scribd?</button>
+      <div class="accordion-body">
+        <p>Yes, if you’re the creator or have permission from the original author. See Scribd’s copyright FAQs.</p>
+      </div>
+    </div>
+  </div>
+</div>
   </main>
 
   <script src="/script.js"></script>
