--- a/public/index.html
+++ b/public/index.html
@@ -96,6 +96,52 @@ a {
   color: #00aaff;
   text-decoration: underline;
 }
+    .faq-section {
+  margin-top: 40px;
+}
+
+.accordion-item {
+  border-top: 2px solid #9b5cff;
+}
+
+.accordion-header {
+  color: #4b00ff;
+  width: 100%;
+  text-align: left;
+  font-weight: bold;
+  font-size: 16px;
+  background: none;
+  border: none;
+  padding: 15px 10px;
+  cursor: pointer;
+  outline: none;
+  transition: background 0.3s;
+}
+
+.accordion-header::before {
+  content: "+ ";
+  color: #4b00ff;
+  display: inline-block;
+  margin-right: 5px;
+}
+
+.accordion-header.active::before {
+  content: "− ";
+}
+
+.accordion-body {
+  display: none;
+  padding: 0 10px 15px 10px;
+  font-size: 14px;
+  color: #4b00ff;
+  background: none;
+  text-align: left;
+}
+
+.accordion-header.active + .accordion-body {
+  display: block;
+}
+
   </style>
 </head>
 <body>
