--- a/public/index.html
+++ b/public/index.html
@@ -171,13 +171,13 @@ a {
     </div>
 
     <div class="recent-section" id="recentSection" style="display: none;">
-  <h3>Recent Downloads</h3>
+  <h3>RECENT DOWNLOAD</h3>
   <table>
     <thead>
       <tr>
-        <th>NO</th>
-        <th>TITLE</th>
-        <th>LINK</th>
+        <th>No</th>
+        <th>Title</th>
+        <th>Link</th>
       </tr>
     </thead>
     <tbody id="recentTableBody">
@@ -187,7 +187,7 @@ a {
 </div>
 
     <div class="faq-section">
-  <h2>FAQ</h2>
+  <h3>FAQ</h3>
   <div class="accordion">
     <div class="accordion-item">
       <button class="accordion-header">What is Scribd?</button>
