--- a/public/index.html
+++ b/public/index.html
@@ -144,6 +144,45 @@ a {
   display: block;
 }
 
+footer {
+  background-color: #1f1f2e;
+  color: #ccc;
+  padding: 30px 20px;
+  text-align: center;
+  font-size: 14px;
+  margin-top: 60px;
+}
+
+.footer-links {
+  margin-bottom: 15px;
+}
+
+.footer-links a {
+  color: #fff;
+  margin: 0 10px;
+  text-decoration: none;
+  font-weight: 500;
+}
+
+.footer-links a:hover {
+  text-decoration: underline;
+}
+
+footer a {
+  color: #7ec9f5;
+  text-decoration: none;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
+
+footer .copyright {
+  margin-top: 15px;
+  color: #aaa;
+}
+
+
   </style>
 </head>
 <body>
@@ -219,4 +258,19 @@ a {
 
   <script src="/script.js"></script>
 </body>
+<footer>
+  <div class="footer-links">
+    <a href="#">FORUM</a>
+    <a href="#">ABOUT</a>
+    <a href="#">ACADEMY</a>
+  </div>
+  <p>
+    This site is optimized for learning and document sharing. All examples and content are for educational purposes only.<br>
+    By using this site, you agree to our <a href="#">terms of use</a>, <a href="#">cookie</a>, and <a href="#">privacy policy</a>.
+  </p>
+  <p class="copyright">
+    &copy; 2025. All rights reserved. Powered by open technologies.
+  </p>
+</footer>
+
 </html>
