--- a/public/index.html
+++ b/public/index.html
@@ -269,7 +269,7 @@ footer .copyright {
     By using this site, you agree to our <a href="#">terms of use</a>, <a href="#">cookie</a>, and <a href="#">privacy policy</a>.
   </p>
   <p class="copyright">
-    &copy; 2025. All rights reserved. Powered by open technologies.
+    &copy; 2025. All rights reserved. Powered by Github & Vercel.
   </p>
 </footer>
 
