--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,11 @@ header {
 }
 
 main {
-  padding: 40px 20px;
-  width: 900px;
+  max-width: 900px;
+  width: 100%;
   margin: 0 auto;
+  padding: 0 15px; /* optional: add some spacing for smaller screens */
+  box-sizing: border-box;
 }
 
 h2 {
