--- a/public/index.html
+++ b/public/index.html
@@ -207,9 +207,9 @@ footer .copyright {
     <h2>What do you want to download from [SCRIBD]?</h2>
     <p>3 easy steps to download documents from [Scribd]</p>
     <div class="button-group">
-      <button class="type-btn">1. Paste [Scribd] link</button>
-      <button class="type-btn">2. Click CONVERT</button>
-      <button class="type-btn">3. Click Download</button>
+      <button class="type-btn">Paste</button>
+      <button class="type-btn">CONVERT</button>
+      <button class="type-btn">Download</button>
     </div>
 
     <div class="input-section">
