--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,8 @@ main {
   flex: 1;
   max-width: 900px;
   width: 100%;
-  margin: 60 auto;
+  margin: 0 auto;
+  margin-top: 60px;
   padding: 0 15px;
   box-sizing: border-box;
  }
