--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>[SCRBD] Downloader</title>
   <meta name="description" content="[SCRBD] Downloader helps you download document, pdf, and presentation from SCRIBD" />
+  <link rel="icon" type="image/x-icon" href="/scrbd.png">
   <style>
   
 html, body {
