--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>[SCRBD] Downloader</title>
+  <title>[SCRBD] Downloader - 3 Steps to download documents from Scribd</title>
   <meta name="description" content="[SCRBD] Downloader helps you download document, pdf, and presentation from SCRIBD" />
   <link rel="icon" type="image/x-icon" href="/scrbd.png">
   <style>
