--- a/public/index.html
+++ b/public/index.html
@@ -6,199 +6,8 @@
   <title>[SCRBD] Downloader - 3 Steps to download documents from Scribd</title>
   <meta name="description" content="[SCRBD] Downloader helps you download document, pdf, and presentation from SCRIBD" />
   <link rel="icon" type="image/x-icon" href="/scrbd.png">
-  <style>
-  
-html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-      
- body {
-  font-family: Arial, sans-serif;
-  background: #ffffff;
-  color: #4b00ff;
-  text-align: center;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-}
-
-header {
-  background: linear-gradient(to right, #4bd4d4, #0047ba);
-  padding: 20px 0;
-  color: white;
-}
-
-.highlight {
-  font-weight: bold;
-}
-
-main {
-  flex: 1;
-  max-width: 900px;
-  width: 100%;
-  margin: 0 auto;
-  margin-top: 50px;
-  padding: 0 15px;
-  box-sizing: border-box;
- }
-
-h2 {
-  margin-bottom: 20px;
-}
-
-.button-group {
-  margin-bottom: 20px;
-}
-
-.type-btn {
-  background: linear-gradient(to right, #a164ff, #48e0e0);
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  margin: 0 5px;
-  border-radius: 10px;
-  font-size: 16px;
-  cursor: pointer;
-}
-
-.input-section {
-  margin-bottom: 30px;
-}
-
-input[type="text"] {
-  width: 60%;
-  padding: 10px;
-  font-size: 16px;
-  border: 2px solid #a164ff;
-  border-radius: 8px;
-}
-
-button {
-  background: linear-gradient(to right, #4bd4d4, #0047ba);
-  color: white;
-  padding: 10px 20px;
-  border: none;
-  margin-left: 10px;
-  font-size: 16px;
-  border-radius: 8px;
-  cursor: pointer;
-}
-
-.result {
-  margin-top: 20px;
-  font-size: 18px;
-}
-
-.recent-section {
-  margin-top: 40px;
-}
-
-table {
-  margin: 0 auto;
-  border-collapse: collapse;
-  width: 80%;
-  border: 2px solid #a164ff;
-}
-
-th, td {
-  border: 1px solid #a164ff;
-  padding: 10px;
-}
-
-a {
-  color: #00aaff;
-  text-decoration: underline;
-}
-    .faq-section {
-  margin-top: 40px;
-}
-
-.accordion-item {
-  border-top: 2px solid #9b5cff;
-}
-
-.accordion-header {
-  color: #4b00ff;
-  width: 100%;
-  text-align: left;
-  font-weight: bold;
-  font-size: 16px;
-  background: none;
-  border: none;
-  padding: 15px 10px;
-  cursor: pointer;
-  outline: none;
-  transition: background 0.3s;
-}
-
-.accordion-header::before {
-  content: "+ ";
-  color: #4b00ff;
-  display: inline-block;
-  margin-right: 5px;
-}
-
-.accordion-header.active::before {
-  content: "− ";
-}
-
-.accordion-body {
-  display: none;
-  padding: 0 10px 15px 10px;
-  font-size: 14px;
-  color: #4b00ff;
-  background: none;
-  text-align: left;
-}
-
-.accordion-header.active + .accordion-body {
-  display: block;
-}
-
-footer {
-  background-color: #1f1f2e;
-  color: #ccc;
-  padding: 30px 20px;
-  text-align: center;
-  font-size: 14px;
-  margin-top: 60px;
-}
-
-.footer-links {
-  margin-bottom: 15px;
-}
-
-.footer-links a {
-  color: #fff;
-  margin: 0 10px;
-  text-decoration: none;
-  font-weight: 500;
-}
-
-.footer-links a:hover {
-  text-decoration: underline;
-}
-
-footer a {
-  color: #7ec9f5;
-  text-decoration: none;
-}
-
-footer a:hover {
-  text-decoration: underline;
-}
-
-footer .copyright {
-  margin-top: 15px;
-  color: #aaa;
-}
-
-
-  </style>
+  <link rel="stylesheet" href="/style.css" />
+ 
 </head>
 <body>
   <header>
