--- a/public/index.html
+++ b/public/index.html
@@ -80,21 +80,7 @@
 </div>
   </main>
 
-  <script src="/script.js"></script>
-
-<footer>
-  <div class="footer-links">
-    <a href="#">FORUM</a>
-    <a href="#">ABOUT</a>
-    <a href="#">ACADEMY</a>
-  </div>
-  <p>
-    This site is optimized for learning and document sharing. All examples and content are for educational purposes only.<br>
-    By using this site, you agree to our <a href="#">terms of use</a>, <a href="#">cookie</a>, and <a href="#">privacy policy</a>.
-  </p>
-  <p class="copyright">
-    &copy; 2025. All rights reserved. Powered by Github & Vercel.
-  </p>
-</footer>
+<script src="/script.js"></script>
+<div id="footer-container"></div>
 </body>
 </html>
