--- a/public/footer.html
+++ b/public/footer.html
@@ -1,8 +1,8 @@
 <footer>
   <div class="footer-links">
-    <a href="#">FORUM</a>
     <a href="#">ABOUT</a>
-    <a href="#">ACADEMY</a>
+    <a href="#">CONTACT US</a>
+    <a href="#">PRIVACY POLICY</a>
   </div>
   <p>
     This site is optimized for learning and document sharing. All examples and content are for educational purposes only.<br>
