--- a/public/viewer.html
+++ b/public/viewer.html
@@ -87,6 +87,6 @@
     document.getElementById("content").innerHTML = "<p style='color:red;'>Missing 'doc' or title parameter in the URL.</p>";
   }
 </script>
-
+<div id="footer-container"></div>
 </body>
 </html>
