--- a/public/viewer.html
+++ b/public/viewer.html
@@ -86,6 +86,16 @@
   } else {
     document.getElementById("content").innerHTML = "<p style='color:red;'>Missing 'doc' or title parameter in the URL.</p>";
   }
+  
+  document.addEventListener("DOMContentLoaded", function () {
+  fetch('/footer.html')
+    .then(response => response.text())
+    .then(data => {
+      document.getElementById('footer-container').innerHTML = data;
+    })
+    .catch(error => console.error('Error loading footer:', error));
+});
+  
 </script>
 <div id="footer-container"></div>
 </body>
