--- a/public/viewer.html
+++ b/public/viewer.html
@@ -3,32 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title id="pageTitle">Scribd Document Viewer</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-    }
-    h2 {
-      margin-bottom: 10px;
-    }
-    .download-btn {
-      display: inline-block;
-      padding: 10px 16px;
-      background-color: #007BFF;
-      color: white;
-      text-decoration: none;
-      border-radius: 5px;
-      margin-bottom: 20px;
-    }
-    .download-btn:hover {
-      background-color: #0056b3;
-    }
-    iframe {
-      width: 100%;
-      height: 600px;
-      border: none;
-    }
-  </style>
+  <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
 
