--- a/public/viewer.html
+++ b/public/viewer.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
-
+<main>
 <div id="content">
   <h2 id="docTitle"></h2>
   <a id="downloadLink" class="download-btn" target="_blank">Download</a>
@@ -73,5 +73,6 @@
   
 </script>
 <div id="footer-container"></div>
+</main>
 </body>
 </html>
