--- a/public/viewer.html
+++ b/public/viewer.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title id="pageTitle">Scribd Document Viewer</title>
+  <meta name="description" content="[SCRBD] Downloader helps you download document, pdf, and presentation from SCRIBD" />
+  <link rel="icon" type="image/x-icon" href="/scrbd.png">
   <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
