--- a/public/viewer.html
+++ b/public/viewer.html
@@ -16,6 +16,13 @@
   <h2 id="docTitle"></h2>
   <a id="downloadLink" class="download-btn" target="_blank">Download</a>
   <div id="viewer"></div>
+
+    <h2>Related Document You Might be Interested in:</h2>
+  <ul id="link-list">
+    <!-- Random links will be displayed here -->
+  </ul>
+
+   
 </div>
 </main>
 <script src="/script.js"></script>
