--- a/public/viewer.html
+++ b/public/viewer.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title id="pageTitle">Scribd Document Viewer</title>
-  <meta name="description" content="[SCRBD] Downloader helps you download document, pdf, and presentation from SCRIBD" />
+  <meta name="description" content="[PDF] Download" id="docTitle" />
   <link rel="icon" type="image/x-icon" href="/scrbd.png">
   <link rel="stylesheet" href="/style.css" />
 </head>
