--- a/public/viewer.html
+++ b/public/viewer.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title id="pageTitle">Scribd Document Viewer</title>
-  <meta name="description" content="[PDF] Download" id="docTitle" />
+  <meta name="description" content="[PDF] download Scribd document for free" />
   <link rel="icon" type="image/x-icon" href="/scrbd.png">
   <link rel="stylesheet" href="/style.css" />
 </head>
@@ -15,6 +15,7 @@
 <div id="content">
   <h2 id="docTitle"></h2>
   <a id="downloadLink" class="download-btn" target="_blank">Download</a>
+  <div id="link-list"></div>
   <div id="viewer"></div>
 
     <h2>Related Document You Might be Interested in:</h2>
