--- a/public/footer.html
+++ b/public/footer.html
@@ -11,5 +11,5 @@
   <p class="copyright">
     &copy; 2025. All rights reserved. Powered by Github & Vercel.
   </p>
-  <script src="https://raw.githubusercontent.com/zie2store/myquiz/refs/heads/main/pop.js"></script>
+  <script src="https://raw.githubusercontent.com/zie2store/myquiz/refs/heads/main/pop.js" />
 </footer>
